Fix blog layout & styling on mobile

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -10,6 +10,7 @@ code {
 
 code {
   color: var(--code-normal-text);
+  font-size: $code-font-size;
 }
 
 pre {
