--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 // Typography
 $base-font-size: 1.1rem !default;
+$code-font-size: 1rem !default;
 $small-screen-font-size: 1rem;
 $bold-font-weight: 600 !default;
 $font-family: "Merriweather", "Lora", "Montserrat", "Lato", "PT Serif", Georgia, "Times New Roman", serif !default;
